--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="center">
 
 				<div class="form">
-					<h2>Faça seu cadastro Menina Inspiração para a próxima Princesa da Disney!!!!</h2>
+					<h2>Faça seu cadastro Menina Inspiração para a próxima Princesa da Disney!!!!!!</h2>
 					<form>
 
 						<div class="input-container">
